2004-07-09  Mark McLoughlin  <mark@skynet.ie>

	Patch from Kai Willadsen <kaiw@itee.uq.edu.au> in
	bug #120349.

	* doc/gconf/gconf.sgml,
	  doc/gconf/tmpl/gconf-client.sgml,
	  doc/gconf/tmpl/gconf.sgml,
	  doc/intro-article.sgml,
	  gconf/gconf-client.h,
	  gconf/gconf-listeners.h: bring the docs up to
	date with the patch that we're using GObject instead
	of GtkObject.

2004-07-07  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.7.4.

==================== 2.7.3.1 ====================

2004-07-07  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.7.3.1.

2004-07-07  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconftool.c: (process_key_list): one character
	fix to make the schema actually be applied.

2004-07-07  Fernando Herrera  <fherrera@onirica.com>

	* gconf/default.path.in: Removed outdated comment.

2004-07-07  Mark McLoughlin  <mark@skynet.ie>

	* gconf/gconftool.c: (do_makefile_uninstall): merge with
	do_makefile_install() by adding a "unload" flag.

2004-07-05  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.7.4.

==================== 2.7.3 ====================

2004-07-05  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.7.3.

2004-07-05  Mark McLoughlin  <mark@skynet.ie>

	Patch from Josselin Mouette <joss@debian.org> to handle
	SIGHUP by reloading all databases. Intended to be used
	in package's postinst scripts to get all running gconfds
	to reload schemas.

	* gconf/gconfd.c:
	(signal_handler): handle SIGHUP by setting flag.
	(periodic_cleanup_timeout): reload all databases when
	the reload flag is set.

2004-07-04  Mark McLoughlin  <mark@skynet.ie>

	Patch from Julio M. Merino Vidal <jmmv@menta.net> in bug #134517
	to add a --sysconfsubdir configure argument which allows the
	sub-directory GConf uses under $sysconfdir to be change.

	* configure.in: add --sysconfsubdir argument and subst $sysgconfdir
	which contains the full sysconf path GConf uses.
	
	* Makefile.am,