@@ -1,3 +1,11 @@
+2004-08-03  Mark McLoughlin  <mark@skynet.ie>
+
+	Patch from Carlos Daniel Ruvalcaba Valenzuela <clsdaniel@yahoo.com.mx>
+	in bug #148973.
+
+	* gconf/gconf-internals.[ch]: (gconf_escape_percents): remove unused
+	(and internal) function.
+
 2004-07-09  Mark McLoughlin  <mark@skynet.ie>
 
 	Patch from Kai Willadsen <kaiw@itee.uq.edu.au> in
